--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.0/dist/chart.umd.min.js"></script>
     <!-- 引入TensorFlow.js库 (指定版本) -->
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@4.10.0/dist/tf.min.js"></script>
-    <!-- 引入FFT库 -->
-    <script src="https://cdn.jsdelivr.net/npm/fft.js@4.0.4/dist/fft.min.js"></script>
+    <!-- 不再需要FFT库，使用Web Audio API的AnalyserNode代替 -->
     <!-- 移除Speech Commands库，使用自定义音频处理 -->
 </head>
 <body>
